# wildfire_ROS_models

./: .gitignore  README.md  pyproject.toml  requirements.txt  sensitivity.py  setup.py  sobol_sensitivity_analysis.py  test_models.py  train_nn.py
docs/: wildfireROS.tex
exporter/: py_ROS_models_to_forefire_cpp.py
fuels/: fuels.py
models/: Balbi2020.py  RothermelAndrews2018.py
paper/: wildfireROS.tex
scripts/: __init__.py  sobol_sensitivity_analysis.py
tests/: test_models.py  test_sensitivity_analysis.py
wildfireROS/: Balbi2020.py  RothermelAndrews2018.py  fuels_database.py  model_set.py  neuralNetROS.py  runROS.py  sensitivity.py  utils.py
wildfire_ROS_models/: Balbi2020.py  Cruz.py  Rothermel1972.py  RothermelAndrews2018.py  __init__.py  fuels_database.py  interactive_polar_plot.py  model_set.py  neuralNetROS.py  py_ROS_models_to_forefire_cpp.py  runROS.py  sensitivity.py  tf_helpers.py  tf_ros_model.py  utils.py
